compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_syntax_record_field_shorthand.snap
---
source: tests/fixtures.rs
assertion_line: 1422
expression: transcript
---
fixture: tests/fixtures/diagnostics/syntax/record_field_shorthand.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × could not parse Riot ML source
   ╭─[tests/fixtures/diagnostics/syntax/record_field_shorthand.ml:3:32]
 2 │   let name = "input";
 3 │   let value = Symbols.symbol { name };
   ·                                ──┬─
   ·                                  ╰── record field shorthand is not supported yet
 4 │   println(name)
   ╰────
  help: write the field as `name: value`
